# ads-bby

./: CLAUDE.md  ads-bby.service  config_dist.json  deps.sh  main.py  pyproject.toml  rgbmatrix-0.0.1-py311-cp311-linux_aarch64.whl  run-dist.sh
api/: Hybrid.py
bby/api/: DumpSlurp.py  Hybrid.py
bby/display/: AircraftGraphRenderer.py  AircraftMapRenderer.py  AircraftRenderer.py  LargeAircraftRenderer.py  PositionAnimator.py  Renderer.py  ScreenRenderer.py  SmallAircraftRenderer.py
bby/images/: alaska.ppm  cub.ppm  cub2.ppm  cub3.ppm
bby/models/: Aircraft.py  BbyCfg.py  Position.py
display/: Renderer.py
models/: Aircraft.py
